# brave-search-app

./: .gitignore  AGENTS.md  README.md  app.py  brave_search.py  go.mod  mise.toml  pyproject.toml
.opencode/plans/: plan-001-rich-search-integration.md  plan-002-news-search-integration.md  plan-003-rich-widget-ui.md  plan-004-revert-422-fallback.md
cmd/server/: main.go
internal/brave/: client.go  client_test.go  models.go  models_test.go
internal/handlers/: handlers.go  handlers_test.go
reports/: run-manifest.json
static/: style.css
templates/: index.html  news.html  results.html
tests/: test_app.py
